...
import com.android.solvit.model.provider.ListProviderViewModel
import com.android.solvit.model.provider.Provider
import com.android.solvit.ui.navigation.NavigationActions

@Composable
fun SpTopAppBar(navigationActions: NavigationActions) {
  Box(modifier = Modifier.fillMaxWidth().testTag("topAppBar")) {
    Image(
        modifier = Modifier.fillMaxWidth().height(200.dp),
        painter = painterResource(id = R.drawable.plumbier), // TODO Link each service to an image
        contentDescription = "image description",
        contentScale = ContentScale.FillBounds)
    Row(
...

@Composable
fun SpFilterBar(display: () -> Unit, listProviderViewModel: ListProviderViewModel) {
  val filters =
      listOf("Top Rates", "Top Prices", "Time") // TODO update with decided list of filters
  Row(
      modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("filterBar"),
      verticalAlignment = Alignment.CenterVertically) {
        LazyRow(
            horizontalArrangement = Arrangement.spacedBy(10.dp, Alignment.Start),
            verticalAlignment = Alignment.Top,
        ) {
          items(filters) { filter ->
...
                      listProviderViewModel.refreshFilters()
                      display()
                    }
                    .padding(1.dp)
                    .width(18.dp)
                    .height(18.dp)
                    .testTag("filterOption"),
            painter = painterResource(id = R.drawable.vector),
            contentDescription = "image description",
            contentScale = ContentScale.Crop)
      }
}

...

  Box(
      modifier =
          Modifier.width(46.dp)
              .height(24.dp)
              .background(color = Color(0xFF4D5652), shape = RoundedCornerShape(size = 59.dp))
              .testTag("Rating")) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            // part has to be modified we can add function here
            modifier = Modifier.clickable {}) {
              Image(
                  modifier = Modifier.padding(1.90667.dp).width(16.dp).height(16.dp),
...
}

@Composable
fun DisplayPopularProviders(providers: List<Provider>) {

  LazyRow(
      modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("popularProviders"),
      horizontalArrangement = Arrangement.spacedBy(10.dp, Alignment.Start),
      verticalAlignment = Alignment.Top,
      userScrollEnabled = true,
  ) {
    items(providers.filter { it.popular }) { provider ->
      Box(modifier = Modifier.clip(RoundedCornerShape(16.dp))) {
...
  }
}

@Composable
fun ListProviders(providers: List<Provider>) {
  LazyColumn(
      modifier = Modifier.fillMaxWidth().testTag("providersList"),
      verticalArrangement = Arrangement.spacedBy(16.dp),
      userScrollEnabled = true,
  ) {
    items(providers) { provider ->
      Row(
          modifier =
...
    Row(
        horizontalArrangement = Arrangement.spacedBy(16.dp),
    ) {
      BasicTextField(
          value = minPrice,
          onValueChange = {
            minPrice = it
            val minPriceValue = it.toDoubleOrNull()
            if (minPriceValue != null) {
              listProviderViewModel.filterProviders(
                  filter = { provider -> provider.price >= minPriceValue }, "Price")
            } else {
              listProviderViewModel.filterProviders(
...
          singleLine = true,
          keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number))

      BasicTextField(
          value = maxPrice,
          onValueChange = {
            maxPrice = it
            val maxPriceValue = it.toDoubleOrNull()
            val minPriceValue = minPrice.toDoubleOrNull()
            if (maxPriceValue != null && minPriceValue != null && minPriceValue < maxPriceValue) {
              listProviderViewModel.filterProviders(
                  { prvd -> maxPriceValue >= prvd.price }, "Price")
            } else {
...
      horizontalArrangement = Arrangement.spacedBy(8.dp),
      verticalArrangement = Arrangement.spacedBy(8.dp),
  ) {
    repeat(list.size) { idx ->
      Box(
          Modifier.background(color = iconsColor[idx], shape = RoundedCornerShape(size = 8.dp))
              .testTag("filterAct")
              .padding(8.dp)
              .clickable {
                filterStringFields(
                    selectedFields.toMutableList(),
                    iconsPressed.toMutableList(),
                    iconsColor.toMutableList(),
...
    repeat(list.size) { idx ->
      Box(
          modifier =
              Modifier.width(55.dp)
                  .height(30.dp)
                  .background(color = colors[idx], shape = RoundedCornerShape(size = 59.dp))
                  .testTag("filterRating")) {
            Row(
                verticalAlignment = Alignment.CenterVertically,
                modifier =
                    Modifier.clickable {
                      filterStringFields(
                          selectedFields.toMutableList(),
...

@Composable
fun ApplyButton(listProviderViewModel: ListProviderViewModel, display: () -> Unit) {
  val filteredList by listProviderViewModel.providersListFiltered.collectAsState()
  Box(
      modifier =
          Modifier.testTag("applyFilterButton")
              .width(249.dp)
              .height(43.dp)
              .background(
                  brush =
                      Brush.horizontalGradient(
                          colors =
...
  }
}

@Composable
fun FilterComposable(listProviderViewModel: ListProviderViewModel, display: () -> Unit) {
  Column(
      modifier = Modifier.fillMaxWidth().testTag("filterSheet"),
      verticalArrangement = Arrangement.spacedBy(12.dp),
      horizontalAlignment = Alignment.CenterHorizontally) {
        Text(
            text = "Filters",
            style =
                TextStyle(
...
